--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -21,7 +21,7 @@
                     <p class="notification__text">
 
                         Ваш товар успешно добавлен
-                        <a href="#">в корзину</a>
+                        <a class="notification__link" href="#">в корзину</a>
                     </p>
                     <svg class="notification__close js-notification-close" width="20" height="20">
                         <use href="../images/icons/sprite.svg#icon-cross"></use>
