changet heart view in catalog, one event handler for buttons

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <include src="./partials/head.html"></include>
     <title>Document</title>
+    <link rel="stylesheet" href="../js/slick/slick/slick.css">
+    <link rel="stylesheet" href="../js/slick/slick/slick-theme.css">
+
 </head>
 
-<body>
+<body class="preload">
+    <include src="./partials/header.html"></include>
+
+
+
+
+
+
+
+    <include src="./partials/recent.html"></include>
+    <include src="./partials/subscribe.html"></include>
+    <include src="./partials/ask.html"></include>
+    <include src="./partials/footer.html"></include>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" crossorigin="anonymous"></script>
+    <script src="/js/header.js"></script>
+    <script src="/js/recent.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
