--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -24,11 +24,8 @@
                         <p class="catalog__price">1190</p>
 
                     </a>
-                    <button class="catalog__favorites is-favorite" type="button" data-id="86"
+                    <button class="catalog__favorites js-favorite is-favorite" type="button" data-id="86"
                         aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
                     </button>
                 </li>
 
@@ -38,10 +35,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -51,10 +46,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -64,10 +57,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -77,10 +68,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -90,10 +79,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -103,10 +90,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
 
@@ -116,10 +101,8 @@
                         <p class="catalog__name">Платье</p>
                         <p class="catalog__price">1190</p>
                     </a>
-                    <button class="catalog__favorites" type="button" data-id="86" aria-label="Add in favorites">
-                        <svg class="catalog__icon" width="17" height="17">
-                            <use class="" href="../images/icons/sprite.svg#icon-favorites"></use>
-                        </svg>
+                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                        aria-label="Add in favorites">
                     </button>
                 </li>
             </ul>
