header appearence in IOS

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,15 +9,17 @@
 
         <a href="#" class="header__logo">MOVE</a>
 
-        <div class="header__personality">
+        <ul class="header__personality">
 
-            <a href="#" type="button" class="header__button" aria-label="Favorites">
+
+
+            <a href="#" class="header__button" aria-label="Favorites">
                 <svg class="header__icon" width="22" height="22">
                     <use class="" href="../images/icons/sprite.svg#icon-heart"></use>
                 </svg>
             </a>
 
-            <a href="#" type="button" class="header__button header__basket" aria-label="Basket">
+            <a href="#" class="header__button header__basket" aria-label="Basket">
                 <svg class="header__icon" width="22" height="22">
                     <use class="" href="../images/icons/sprite.svg#icon-bag"></use>
                 </svg>
@@ -25,7 +27,7 @@
             </a>
 
 
-        </div>
+    </div>
     </div>
 
     <div class="header__menu menu">
