--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -17,15 +17,16 @@
   padding-left: 30px;
   padding-right: 30px;
 
-  @media screen and (min-width: 380px) {
-    justify-content: center;
-  }
+  // @media screen and (min-width: 380px) {
+  //   justify-content: center;
+  // }
 }
 
 .header__button {
   padding: 0;
   border: 0;
   background: none;
+  display: inline-block;
 }
 
 .header__logo {
@@ -35,22 +36,22 @@
 }
 
 .header__personality .header__button:not(:first-child) {
-  margin-left: 17px;
+  margin-left: 15px;
 }
 
-.burger-btn {
-  @media screen and (min-width: 380px) {
-    position: absolute;
-    left: 30px;
-  }
-}
+// .burger-btn {
+//   @media screen and (min-width: 380px) {
+//     position: absolute;
+//     left: 30px;
+//   }
+// }
 
-.header__personality {
-  @media screen and (min-width: 380px) {
-    position: absolute;
-    right: 30px;
-  }
-}
+// .header__personality {
+//   @media screen and (min-width: 380px) {
+//     position: absolute;
+//     right: 30px;
+//   }
+// }
 
 .header__menu {
   background-color: #ffffff;
@@ -257,4 +258,5 @@
   transform: translate(-50%, -50%);
   top: 50%;
   font-size: 11px;
+  padding-top: 1px;
 }
