--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,9 +9,7 @@
 
         <a href="#" class="header__logo">MOVE</a>
 
-        <ul class="header__personality">
-
-
+        <div class="header__personality">
 
             <a href="#" class="header__button" aria-label="Favorites">
                 <svg class="header__icon" width="22" height="22">
@@ -27,7 +25,7 @@
             </a>
 
 
-    </div>
+        </div>
     </div>
 
     <div class="header__menu menu">
