--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -123,6 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" crossorigin="anonymous"></script>
     <script src="/js/header.js"></script>
     <script src="/js/recent.js"></script>
+    <script src="/js/new.js"></script>
     <script src="/js/catalog.js"></script>
 
 </body>
