--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -32,8 +32,6 @@
 
         <form action="">
 
-
-
             <div class="container card__container">
                 <ul class="card__gallery gallery">
                     <li class="gallery__item">
@@ -78,49 +76,49 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#cadfff" checked>
-                                <span class="color__icon" style="background-color: #cadfff;"></span>
+                                <!-- <span class="color__icon" style="background-color: #cadfff;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#e9cbb7">
-                                <span class="color__icon" style="background-color: #e9cbb7;"></span>
+                                <!-- <span class="color__icon" style="background-color: #e9cbb7;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#9e9e9e">
-                                <span class="color__icon" style="background-color: #9e9e9e;"></span>
+                                <!-- <span class="color__icon" style="background-color: #9e9e9e;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#b3e8ff">
-                                <span class="color__icon" style="background-color: #b3e8ff;"></span>
+                                <!-- <span class="color__icon" style="background-color: #b3e8ff;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#eca6a3">
-                                <span class="color__icon" style="background-color: #eca6a3;"></span>
+                                <!-- <span class="color__icon" style="background-color: #eca6a3;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#c71a14">
-                                <span class="color__icon" style="background-color: #c71a14;"></span>
+                                <!-- <span class="color__icon" style="background-color: #c71a14;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#ffffff">
-                                <span class="color__icon" style="background-color: #ffffff;"></span>
+                                <!-- <span class="color__icon" style="background-color: #ffffff;"></span> -->
                             </label>
                         </li>
                     </ul>
