--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -30,7 +30,7 @@
                     <img class="categoty__image" src="../images/categories/img1.jpg" alt="Фото категории">
                     <div class="category__content">
                         <h2 class="category__title">Платья и юбки</h2>
-                        <a class="category__link" href="#">Купить</a>
+                        <a class="category__link" href="#"><span class="category__text">Купить</span></a>
                     </div>
                 </li>
 
@@ -38,7 +38,7 @@
                     <img class="categoty__image" src="../images/categories/img2.jpg" alt="Фото категории">
                     <div class="category__content">
                         <h2 class="category__title">Платья и юбки</h2>
-                        <a class="category__link" href="#">Купить</a>
+                        <a class="category__link" href="#"><span class="category__text">Купить</span></a>
                     </div>
                 </li>
             </ul>
