--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -76,6 +76,7 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#cadfff" checked>
+                                <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
                                 <!-- <span class="color__icon" style="background-color: #cadfff;"></span> -->
                             </label>
                         </li>
@@ -83,6 +84,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#e9cbb7">
+                                <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #e9cbb7;"></span> -->
                             </label>
                         </li>
@@ -90,6 +93,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#9e9e9e">
+                                <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #9e9e9e;"></span> -->
                             </label>
                         </li>
@@ -97,6 +102,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#b3e8ff">
+                                <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #b3e8ff;"></span> -->
                             </label>
                         </li>
@@ -104,6 +111,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#eca6a3">
+                                <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #eca6a3;"></span> -->
                             </label>
                         </li>
@@ -111,6 +120,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#c71a14">
+                                <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #c71a14;"></span> -->
                             </label>
                         </li>
@@ -118,6 +129,8 @@
                         <li class="color__field">
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#ffffff">
+                                <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
+
                                 <!-- <span class="color__icon" style="background-color: #ffffff;"></span> -->
                             </label>
                         </li>
@@ -171,7 +184,7 @@
             <ul class="info">
 
                 <li class="info__item">
-                    <button class="info__title js-content-btn" type="button">Состав</button>
+                    <button class="info__title js-content-btn " type="button">Состав</button>
                     <p class="info__consist info__content">шерсть 50%, акрил 40%, мохер 10%</p>
                 </li>
 
