--- a/src/sass/product.scss
+++ b/src/sass/product.scss
@@ -92,13 +92,17 @@
   text-transform: uppercase;
   font-size: 14px;
   font-family: 'Geometria medium';
-  padding: 25px 0;
+  // padding: 25px 0;
   background-color: transparent;
   border: none;
   display: flex;
   align-items: center;
   position: relative;
   width: 100%;
+}
+
+.info__title {
+  padding: 25px 0;
 }
 
 .info__title {
@@ -121,14 +125,23 @@
 .product__size {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-right: -10px;
   margin-left: -10px;
 }
 
 .color__field,
 .size__field {
-  margin: 10px;
+  margin: 5px;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.color__field {
+  &:hover .color__image,
+  &:focus .color__image {
+    transform: scale(1.3);
+  }
 }
 
 .color__label,
@@ -143,6 +156,15 @@
 
 .color__input:checked + .color__icon {
   border: 3px solid black;
+}
+
+.color__image {
+  width: 40px;
+  transition: 250ms;
+}
+
+.color__input:checked + .color__image {
+  transform: scale(1.3);
 }
 
 .color__icon {
@@ -163,6 +185,7 @@
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  transition: 250ms;
 }
 
 .size__input:checked + .size__name {
@@ -252,6 +275,11 @@
   text-transform: uppercase;
   font-family: 'Geometria medium';
   font-size: 14px;
+}
+
+.help__item {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .help__item:not(:last-child) {
