connection between colors icons and photos at product page

--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -34,23 +34,23 @@
 
             <div class="container card__container">
                 <ul class="card__gallery gallery">
-                    <li class="gallery__item">
+                    <li class="gallery__item" data-id="1">
                         <img class="gallery__photo" src="../images/catalog/item2.png" alt="Фото товара">
                     </li>
 
-                    <li class="gallery__item">
+                    <li class="gallery__item" data-id="2">
                         <img class="gallery__photo" src="../images/catalog/item4.png" alt="Фото товара">
                     </li>
 
-                    <li class="gallery__item">
+                    <li class="gallery__item" data-id="3">
                         <img class="gallery__photo" src="../images/catalog/item6.png" alt="Фото товара">
                     </li>
 
-                    <li class="gallery__item">
+                    <li class="gallery__item" data-id="5">
                         <img class="gallery__photo" src="../images/catalog/item7.png" alt="Фото товара">
                     </li>
 
-                    <li class="gallery__item">
+                    <li class="gallery__item" data-id="4">
                         <img class="gallery__photo" src="../images/catalog/item8.png" alt="Фото товара">
                     </li>
 
@@ -74,7 +74,7 @@
                     <ul class="product__palette">
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="1">
                                 <input class="color__input" type="radio" name="color-set" value="#cadfff" checked>
                                 <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
                                 <!-- <span class="color__icon" style="background-color: #cadfff;"></span> -->
@@ -82,47 +82,37 @@
                         </li>
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="2">
                                 <input class="color__input" type="radio" name="color-set" value="#e9cbb7">
                                 <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #e9cbb7;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="3">
                                 <input class="color__input" type="radio" name="color-set" value="#9e9e9e">
                                 <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #9e9e9e;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="4">
                                 <input class="color__input" type="radio" name="color-set" value="#b3e8ff">
                                 <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #b3e8ff;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="5">
                                 <input class="color__input" type="radio" name="color-set" value="#eca6a3">
                                 <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #eca6a3;"></span> -->
                             </label>
                         </li>
 
                         <li class="color__field">
-                            <label class="color__label">
+                            <label class="color__label" id="6">
                                 <input class="color__input" type="radio" name="color-set" value="#c71a14">
                                 <img class="color__image" src="../images/colors/009.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #c71a14;"></span> -->
                             </label>
                         </li>
 
@@ -130,8 +120,6 @@
                             <label class="color__label">
                                 <input class="color__input" type="radio" name="color-set" value="#ffffff">
                                 <img class="color__image" src="../images/colors/022.png" alt="Цвет товара">
-
-                                <!-- <span class="color__icon" style="background-color: #ffffff;"></span> -->
                             </label>
                         </li>
                     </ul>
