header font changed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,7 +40,7 @@
 
         <div class="menu__wrap">
 
-            <a class="menu__phone header__link" href="tel:+380992302257">+38(099) 23 02 257</a>
+            <a class="menu__phone header__link" href="tel:+380992302257">+38 (099) 23 02 257</a>
 
             <div class="header__internationalization">
                 <button class="current__language language__button">
@@ -70,7 +70,9 @@
             </div>
 
         </div>
-        <a class="menu__cabinet header__link" href="#">Личный кабинет</a>
+        <a class="menu__cabinet header__link" href="#">
+            <span>Личный кабинет</span>
+        </a>
 
         <ul class="menu__catalog">
             <li class="menu__category">
@@ -83,13 +85,19 @@
 
                 <ul class="menu__subcategory">
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Смотреть все</a>
+                        <a class="menu__link" href="#">
+                            <span>Смотреть все</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Кардиганы</a>
+                        <a class="menu__link" href="#">
+                            <span>Кардиганы</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Топы и футболки</a>
+                        <a class="menu__link" href="#">
+                            <span>Топы и футболки</span>
+                        </a>
                     </li>
                 </ul>
             </li>
@@ -104,13 +112,19 @@
 
                 <ul class="menu__subcategory">
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Смотреть все</a>
+                        <a class="menu__link" href="#">
+                            <span>Смотреть все</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Кардиганы</a>
+                        <a class="menu__link" href="#">
+                            <span>Кардиганы</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Топы и футболки</a>
+                        <a class="menu__link" href="#">
+                            <span>Топы и футболки</span>
+                        </a>
                     </li>
                 </ul>
             </li>
@@ -125,13 +139,19 @@
 
                 <ul class="menu__subcategory">
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Смотреть все</a>
+                        <a class="menu__link" href="#">
+                            <span>Смотреть все</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Кардиганы</a>
+                        <a class="menu__link" href="#">
+                            <span>Кардиганы</span>
+                        </a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#">Топы и футболки</a>
+                        <a class="menu__link" href="#">
+                            <span>Топы и футболки</span>
+                        </a>
                     </li>
                 </ul>
             </li>
