logo changed, card changed

--- a/src/partials/cart.html
+++ b/src/partials/cart.html
@@ -59,8 +59,7 @@
 
                             </div>
 
-                            <button class="product__delete" type="button">
-                                <p class="product__marker">Удалить</p>
+                            <button class="product__delete" type="button" aria-label="Удалить">
                                 <svg class="product__cross" width="12" height="12">
                                     <use href="../images/icons/sprite.svg#icon-cross"></use>
                                 </svg>
@@ -99,8 +98,7 @@
 
                             </div>
 
-                            <button class="product__delete" type="button">
-                                <p class="product__marker">Удалить</p>
+                            <button class="product__delete" type="button" aria-label="Удалить">
                                 <svg class="product__cross" width="12" height="12">
                                     <use href="../images/icons/sprite.svg#icon-cross"></use>
                                 </svg>
