--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,11 @@
             </svg>
         </button>
 
-        <a href="#" class="header__logo">MOVE</a>
+        <a href="#" class="header__logo" aria-label="Logo">
+            <svg class="header__image">
+                <use class="" href="../images/icons/sprite.svg#icon-logo"></use>
+            </svg>
+        </a>
 
         <div class="header__personality">
 
