--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -50,8 +50,7 @@
 
                         </div>
 
-                        <button class="product__delete" type="button">
-                            <p class="product__marker">Удалить</p>
+                        <button class="product__delete" type="button" aria-label="Удалить">
                             <svg class="product__cross" width="12" height="12">
                                 <use href="../images/icons/sprite.svg#icon-cross"></use>
                             </svg>
@@ -82,8 +81,7 @@
 
                         </div>
 
-                        <button class="product__delete" type="button">
-                            <p class="product__marker">Удалить</p>
+                        <button class="product__delete" type="button" aria-label="Удалить">
                             <svg class="product__cross" width="12" height="12">
                                 <use href="../images/icons/sprite.svg#icon-cross"></use>
                             </svg>
