--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -39,10 +39,18 @@
 }
 
 .header__logo {
-  font-size: 30px;
-  text-transform: uppercase;
   color: inherit;
-  text-align: center;
+  fill: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__image {
+  width: 90px;
+  height: 45px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .header__personality {
