--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -11,111 +11,116 @@
 <body class="preload">
     <include src="./partials/header.html"></include>
 
-    <section class="catalog">
+    <main>
+        <section class="catalog">
 
-        <div class="container">
-            <h1 class="section__title">Новинки</h1>
+            <div class="container">
+                <h1 class="section__title">Новинки</h1>
 
-            <ul class="catalog__list">
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item1.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
+                <ul class="catalog__list">
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item1.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
 
-                    </a>
-                    <button class="catalog__favorites js-favorite is-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                        </a>
+                        <button class="catalog__favorites js-favorite is-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item2.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item2.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item3.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item3.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item4.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item4.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item5.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item5.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item6.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item6.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item7.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item7.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
 
-                <li class="catalog__item">
-                    <a class="catalog__link" href="#">
-                        <img class="catalog__image" src="../images/catalog/item8.png" alt="Фото товара">
-                        <p class="catalog__name">Платье</p>
-                        <p class="catalog__price">1190</p>
-                    </a>
-                    <button class="catalog__favorites js-favorite" type="button" data-id="86"
-                        aria-label="Add in favorites">
-                    </button>
-                </li>
-            </ul>
+                    <li class="catalog__item">
+                        <a class="catalog__link" href="#">
+                            <img class="catalog__image" src="../images/catalog/item8.png" alt="Фото товара">
+                            <p class="catalog__name">Платье</p>
+                            <p class="catalog__price">1190</p>
+                        </a>
+                        <button class="catalog__favorites js-favorite" type="button" data-id="86"
+                            aria-label="Add in favorites">
+                        </button>
+                    </li>
+                </ul>
 
-            <button class="button catalog__button is-show-more" type="button">Показать еще</button>
-        </div>
+                <button class="button catalog__button is-show-more" type="button">Показать еще</button>
+            </div>
+
+        </section>
+
+        <include src="./partials/recent.html"></include>
+        <include src="./partials/subscribe.html"></include>
+        <!-- <include src="./partials/ask.html"></include> -->
+        <include src="./partials/notification.html"></include>
+    </main>
 
 
 
-    </section>
-
-    <include src="./partials/recent.html"></include>
-    <include src="./partials/subscribe.html"></include>
 
     <include src="./partials/footer.html"></include>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
