--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -18,6 +18,17 @@ body {
   padding-top: 80px;
   color: #000000;
   // font-size: 15px;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex: 0 0 auto;
 }
 
 ul {
