notifications with text as variable

--- a/src/partials/notification.html
+++ b/src/partials/notification.html
@@ -5,7 +5,7 @@
             <use class="icon-error" href="../images/icons/sprite.svg#icon-exclamation"></use>
 
         </svg>
-        <p class="notification__text">Какой-то текст</p>
+        <p class="notification__text js-notification__text">Какой-то текст</p>
         <svg class="notification__close js-notification-close" width="20" height="20">
             <use href="../images/icons/sprite.svg#icon-cross"></use>
         </svg>
