loader in catalog page

--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -116,6 +116,7 @@
         <include src="./partials/recent.html"></include>
         <include src="./partials/subscribe.html"></include>
         <!-- <include src="./partials/ask.html"></include> -->
+        <include src="./partials/loader.html"></include>
         <include src="./partials/notification.html"></include>
     </main>
 
@@ -130,6 +131,7 @@
     <script src="/js/recent.js"></script>
     <script src="/js/new.js"></script>
     <script src="/js/catalog.js"></script>
+    <script src="/js/loader.js"></script>
 
 </body>
 
